GNOME Bugzilla – Bug 672162
dconf uses g_slist_remove instead of g_slist_remove_link
Last modified: 2012-03-19 15:39:07 UTC
Created attachment 209853 [details] [review] Patch to fix the issue dconf_dbus_client_unsubscribe is using g_slist_remove instead of g_slist_remove_link and thus the element is not being correctly removed from the list causing crashes the next time dcdbc->watches is iterated