dbus-1: Call g_slist_remove_link instead of g_slist_remove

https://bugzilla.gnome.org/show_bug.cgi?id=672162